# strix

./: .gitignore  AGENTS.md  Cargo.toml  OPTIMIZATIONS.md  README.md  implementation-plan.md
src/: cli.rs  error.rs  lib.rs  main.rs
src/bench/: mod.rs
src/compile/: ir.rs  mod.rs
src/dict/: decoding.rs  encoding.rs  mod.rs  well_known.rs
src/engine/: inconsistency.rs  mod.rs  sameas.rs
src/output/: mod.rs  report.rs  serialize.rs
src/owl/: mod.rs  parse.rs
src/rdf/: input.rs  mod.rs  parser.rs
src/store/: delta.rs  merge.rs  mod.rs  relation.rs  segment.rs
tests/: reasoning.rs  w3c_owl2rl.rs
