[package]
name = "strix"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
bzip2 = "0.6"
clap = { version = "4", features = ["derive"] }
flate2 = "1.1"
hashbrown = "0.16.1"
horned-owl = "1.4"
libc = "0.2.184"
oxrdf = "0.3"
oxrdfio = "0.2"
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tempfile = "3"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
ureq = "2.12.1"
url = "2.5.8"
walkdir = "2.5"
xz2 = "0.1"
